[gd_scene load_steps=53 format=3 uid="uid://v32muu1mtja0"]

[ext_resource type="Script" path="res://scripts/traveler.gd" id="1_8egw5"]
[ext_resource type="Texture2D" uid="uid://bwebggliom52g" path="res://assets/MinifolksVillagers/Original/Outline/MiniGraveDigger.png" id="2_o7yqu"]
[ext_resource type="FontFile" uid="uid://ckysx248ayviu" path="res://assets/fonts/Eagle_Lake/EagleLake-Regular.ttf" id="3_j1lwd"]
[ext_resource type="Texture2D" uid="uid://ye3s4w3mueu4" path="res://assets/MinifolksVillagers/Original/Outline/MiniGatherer.png" id="3_ttm5q"]
[ext_resource type="Texture2D" uid="uid://bbu7msloojn0t" path="res://assets/MinifolksVillagers/MinifolksVillagers/Outline/MiniWorker.png" id="5_wcqj6"]
[ext_resource type="Texture2D" uid="uid://d0xxsrgp6p4g6" path="res://assets/MinifolksVillagers/Original/Outline/MiniLumberjack.png" id="6_c3rut"]
[ext_resource type="Texture2D" uid="uid://do7e6srrfl06a" path="res://assets/MinifolksVillagers/Original/Outline/MiniMerchant.png" id="7_wwpdt"]
[ext_resource type="Texture2D" uid="uid://bj46euctw5uhk" path="res://assets/MinifolksVillagers/Blue/Outline/MiniSuspiciousMerchantB.png" id="8_3pslq"]

[sub_resource type="AtlasTexture" id="AtlasTexture_f1bfb"]
atlas = ExtResource("2_o7yqu")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bltb5"]
atlas = ExtResource("2_o7yqu")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wd8j7"]
atlas = ExtResource("2_o7yqu")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g7cjj"]
atlas = ExtResource("2_o7yqu")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mancs"]
atlas = ExtResource("2_o7yqu")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ju1v0"]
atlas = ExtResource("2_o7yqu")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w5gce"]
atlas = ExtResource("2_o7yqu")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t2d3t"]
atlas = ExtResource("2_o7yqu")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mepc4"]
atlas = ExtResource("2_o7yqu")
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jry5r"]
atlas = ExtResource("2_o7yqu")
region = Rect2(160, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fq8xx"]
atlas = ExtResource("3_ttm5q")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kuqkn"]
atlas = ExtResource("3_ttm5q")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d88fm"]
atlas = ExtResource("3_ttm5q")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1os1r"]
atlas = ExtResource("3_ttm5q")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ma1jh"]
atlas = ExtResource("3_ttm5q")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hx2ir"]
atlas = ExtResource("3_ttm5q")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d4tep"]
atlas = ExtResource("3_ttm5q")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t423j"]
atlas = ExtResource("3_ttm5q")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3b137"]
atlas = ExtResource("3_ttm5q")
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_162sg"]
atlas = ExtResource("3_ttm5q")
region = Rect2(160, 96, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_kfu48"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1bfb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bltb5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wd8j7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g7cjj")
}],
"loop": true,
"name": &"death_guy",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mancs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ju1v0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w5gce")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t2d3t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mepc4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jry5r")
}],
"loop": true,
"name": &"death_guyR",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fq8xx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kuqkn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d88fm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1os1r")
}],
"loop": true,
"name": &"flower_person",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ma1jh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hx2ir")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d4tep")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t423j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3b137")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_162sg")
}],
"loop": true,
"name": &"flower_personR",
"speed": 6.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4jn7u"]
size = Vector2(30.25, 44.5)

[sub_resource type="CircleShape2D" id="CircleShape2D_2xcvr"]
radius = 112.0

[sub_resource type="AtlasTexture" id="AtlasTexture_d6g0p"]
atlas = ExtResource("5_wcqj6")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_20ktb"]
atlas = ExtResource("6_c3rut")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i05bh"]
atlas = ExtResource("6_c3rut")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wbxtk"]
atlas = ExtResource("6_c3rut")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_erpww"]
atlas = ExtResource("6_c3rut")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kgj7v"]
atlas = ExtResource("7_wwpdt")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_agg8s"]
atlas = ExtResource("7_wwpdt")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gfjxy"]
atlas = ExtResource("7_wwpdt")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8vg4f"]
atlas = ExtResource("7_wwpdt")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_limhl"]
atlas = ExtResource("7_wwpdt")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c1g6e"]
atlas = ExtResource("7_wwpdt")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ovv0"]
atlas = ExtResource("7_wwpdt")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bjl85"]
atlas = ExtResource("7_wwpdt")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ty4tc"]
atlas = ExtResource("7_wwpdt")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t1pdt"]
atlas = ExtResource("7_wwpdt")
region = Rect2(160, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tgkb7"]
atlas = ExtResource("7_wwpdt")
region = Rect2(192, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fa85m"]
atlas = ExtResource("8_3pslq")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k16tv"]
atlas = ExtResource("8_3pslq")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ht504"]
atlas = ExtResource("8_3pslq")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_irnr8"]
atlas = ExtResource("8_3pslq")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_w1pcu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d6g0p")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_20ktb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i05bh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wbxtk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_erpww")
}],
"loop": true,
"name": &"new_animation",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kgj7v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_agg8s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gfjxy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8vg4f")
}],
"loop": true,
"name": &"new_animation_1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_limhl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c1g6e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ovv0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bjl85")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ty4tc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t1pdt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tgkb7")
}],
"loop": true,
"name": &"new_animation_2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fa85m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k16tv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ht504")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_irnr8")
}],
"loop": true,
"name": &"new_animation_3",
"speed": 5.0
}]

[node name="fellowTraveler" type="CharacterBody2D"]
script = ExtResource("1_8egw5")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(1, 3)
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_kfu48")
animation = &"death_guy"
frame_progress = 0.559222

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0.875, 33.75)
shape = SubResource("RectangleShape2D_4jn7u")

[node name="conversationRange" type="Area2D" parent="."]
position = Vector2(0, 32)
collision_layer = 2
collision_mask = 2

[node name="convoRangeCollision" type="CollisionShape2D" parent="conversationRange"]
visible = false
shape = SubResource("CircleShape2D_2xcvr")

[node name="toolTip" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -81.0
offset_top = 76.0
offset_right = 82.0
offset_bottom = 103.0
grow_horizontal = 2
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("3_j1lwd")
text = "press enter to talk"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimatedSprite2D2" type="AnimatedSprite2D" parent="."]
position = Vector2(365, 122.5)
scale = Vector2(8, 7.415)
sprite_frames = SubResource("SpriteFrames_w1pcu")
animation = &"new_animation_3"

[connection signal="body_entered" from="conversationRange" to="." method="_on_conversation_range_body_entered"]
[connection signal="body_exited" from="conversationRange" to="." method="_on_conversation_range_body_exited"]
